<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button_sonstiges"
        android:layout_width="379dp"
        android:layout_height="213dp"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        android:text="@string/hbvmain_for_students_sonstiges"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_mensaplan"
        android:layout_width="379dp"
        android:layout_height="213dp"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        android:text="@string/hbvmain_for_students_mensaplan"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline"
        app:layout_constraintVertical_bias="0.104" />

    <Button
        android:id="@+id/button_stundenplan"
        android:layout_width="379dp"
        android:layout_height="213dp"
        android:paddingTop="80dp"
        android:paddingBottom="80dp"
        android:text="@string/hbvmain_for_students_stundenplan"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hbvmain_for_students"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="228dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/back2mainMenu"
        android:textAllCaps="false"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iMensa2"
        android:layout_width="963dp"
        android:layout_height="571dp"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@null"
        android:translationZ="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headline" />

</androidx.constraintlayout.widget.ConstraintLayout>